--- a/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
+++ b/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
@@ -16,7 +16,7 @@
 
         <nav id="dashboard-nav-weekly-planning" class="navbar navbar-primary bg-dark navbar-expand-lg">
             <div class="col-md-1">
-                <a class="navbar-brand text-light" href="#">Weekly Planning</a>
+                <a class="navbar-brand text-light" href="#"></a>
             </div>
             <div class="col-md-10 d-flex justify-content-center">
                 <ul class="navbar-nav mx-auto">
