--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -126,7 +126,7 @@
                 <div class="in-app-menu-medium-and-up">
                     <nav id="dashboard-nav-2" class="navbar navbar-primary bg-secondary navbar-expand-lg red-tooltip">
                         <div class="col-lg-2">
-                            <a class="navbar-brand text-light" href="#">@title</a>
+                            <a class="navbar-brand text-light" href="#"></a>
                         </div>
                         <ul class="navbar-nav mx-auto">
                         @if(maybeClassContext.isDefined) {
