--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -388,14 +388,19 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Plan <span data-subject-name=""  id="create-weekly-plans-lesson-subject-name"></span> Lesson(s)</h5>
+                    <h5 class="modal-title">Plan <span id="create-weekly-plans-number-of-lessons"></span>
+                        <span data-subject-name=""  id="create-weekly-plans-lesson-subject-name"></span>
+                         Lesson(s)
+                        <br>
+                    <div id="create-weekly-plans-lessons-summaries"></div>
+                    </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
 
-                    <div id="create-weekly-plans-lessons-summaries"></div>
                 </div>
                 <div class="modal-body">
+
                     <p>
 
                     </p>
