--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -401,10 +401,7 @@
                 </div>
                 <div class="modal-body">
 
-                    <p>
-
-                    </p>
-                    <p>Lesson text goes here.</p>
+                    for each lesson, generate below
 
                     <div class="row">
                         <button class="btn btn-sm btn-success create-weekly-plans-add-to-lesson-button">
