--- a/server/app/views/planning/weekly/weeklyView.scala.html
+++ b/server/app/views/planning/weekly/weeklyView.scala.html
@@ -33,6 +33,17 @@
 
 @_templateWeeklyPlanning(handler, userPictureUri, userFirstName, userFamilyName, classDetails, CLASS_WEEKLY_PLANS, Some(WEEKLY_VIEW), currentTerm) {
 
+    <div id="weekly-planning-plan-this-week-button" class="row d-flex justify-content-around">
+        <button type="button" class="btn btn-primary btn-lg">
+            Plan This Week
+        </button>
+    </div>
+
+    <div id="weekly-planning-plan-status">
+        Plan Status: <span class="badge badge-pill badge-danger">Not Started</span>
+    </div>
+
+
     <section id="class-timetable-section">
 
         <div class="table-responsive-md">
@@ -75,6 +86,7 @@
                             <div class="weekly-plan-dayoftheweek">
                             @dayOfTheWeek.toLowerCase.capitalize
                             </div>
+                            <div data-day-of-the-week="@dayOfTheWeek" class="weekly-plan-dayoftheweek-specific-date"></div>
                         </td>
                         <th scope="col" class=""><div class="col"></div></th>
                         @for((session, sessionIndex) <- classTimetable.allSessionsOfTheWeek.sortBy(sesh => (sesh.sessionOfTheDay.dayOfTheWeek.ordinal(), sesh.sessionOfTheDay.startTime.timeIso8601)).map(wrapper => wrapper.sessionOfTheDay).zipWithIndex) {
