--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -172,7 +172,7 @@
 
                             @if(maybeClassContext.get.isInstanceOf[models.timetoteach.ui.CLASS_WEEKLY_PLANS.type]) {
                                 <li class="nav-item">
-                                    <a class="btn btn-outline-warning btn-sm class-level-button" role="button"
+                                    <a class="btn btn-warning btn-sm class-level-button" role="button"
                                     href="@controllers.planning.weekly.routes.WeeklyPlanningController.weeklyViewOfWeeklyPlanning(maybeClassDetails.get.id.id)">
                                         Weekly Plans</a>
                                 </li>
