--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -1,3 +1,12 @@
+#term-start-text {
+    margin-left: 0.4rem;
+}
+
+#term-end-text {
+    margin-right: 0.4rem;
+}
+
+
 #termly-plans-overview-of-all-classes-section {
     padding: 0.5rem;
     margin-top: 2.5rem;
