--- a/server/app/views/askInitialPreferences.scala.html
+++ b/server/app/views/askInitialPreferences.scala.html
@@ -1,8 +1,8 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUser: io.sudostream.timetoteach.messages.systemwide.model.User, postInitialPreferencesUrl: Call)(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUser: io.sudostream.timetoteach.messages.systemwide.model.User, postInitialPreferencesUrl: Call, todaysDate: java.time.LocalDate)(implicit request: AuthenticatedRequest[Any])
 
 @timetoteachAppMain(handler, "Setup Questions",
-    userPictureUri, userFirstName, userFamilyName, None, None, None, None, None){
+    userPictureUri, userFirstName, userFamilyName, None, None, None, None, None, todaysDate){
     <li></li> }{
     <li></li> }{
 
