--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -1,8 +1,8 @@
 @import models.timetoteach.TimeToTeachUserId
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, schoolsForTeacher: List[models.timetoteach.School] )
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, schoolsForTeacher: List[models.timetoteach.School] , todaysDate: java.time.LocalDate)
 
 @timetoteachAppMain(handler, s"Add New Class",
- userPictureUri, userFirstName, userFamilyName, None, None, None, None, None) {
+ userPictureUri, userFirstName, userFamilyName, None, None, None, None, None, todaysDate) {
  <li></li>
 }{
  <li></li>
