--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -1,9 +1,9 @@
 @import models.timetoteach.TimeToTeachUserId
 @import duplicate.model.ClassDetails
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classes: List[ClassDetails], schoolsForTeacher: List[models.timetoteach.School])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classes: List[ClassDetails], schoolsForTeacher: List[models.timetoteach.School], todaysDate: java.time.LocalDate)
 
 @timetoteachAppMain(handler, s"Classes Home",
-    userPictureUri, userFirstName, userFamilyName, None, None, None, None, None) {
+    userPictureUri, userFirstName, userFamilyName, None, None, None, None, None, todaysDate) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary btn-block" role="button" href="@routes.Application.timeToTeachApp()">
