--- a/server/app/views/planning/classtimetables/classtimetable.scala.html
+++ b/server/app/views/planning/classtimetables/classtimetable.scala.html
@@ -4,10 +4,10 @@
 @import shared.model.classtimetable.{WWWClassTimetable, _}
 @import models.timetoteach.ui.CLASS_TIMETABLE
 @import models.timetoteach.term.SchoolTerm
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], schoolDayTimes: SchoolDayTimes, savedWwwClassTimetable: Option[WWWClassTimetable], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails,  currentTerm: SchoolTerm)(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], schoolDayTimes: SchoolDayTimes, savedWwwClassTimetable: Option[WWWClassTimetable], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails,  currentTerm: SchoolTerm, todaysDate: java.time.LocalDate)(implicit request: AuthenticatedRequest[Any])
 
 @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
-    userPictureUri, userFirstName, userFamilyName, Some(classDetails), Some(CLASS_TIMETABLE), None, None, Some(currentTerm)) {
+    userPictureUri, userFirstName, userFamilyName, Some(classDetails), Some(CLASS_TIMETABLE), None, None, Some(currentTerm), todaysDate) {
 
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
