--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -4,10 +4,10 @@
 @import models.timetoteach.ui.CLASS_TERMLY_PLANS
 @import models.timetoteach.planning.TermlyCurriculumSelection
 @import models.timetoteach.term.SchoolTerm
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, planningAreas: List[ScottishCurriculumPlanningAreaWrapper], postSelectedCurriculumAreasUrl: Call, theForm: Form[controllers.planning.termly.TermlyPlansControllerFormHelper.CurriculumAreaSelectionData], currentTermlyCurriculumSelection: TermlyCurriculumSelection, currentTerm: SchoolTerm)(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, planningAreas: List[ScottishCurriculumPlanningAreaWrapper], postSelectedCurriculumAreasUrl: Call, theForm: Form[controllers.planning.termly.TermlyPlansControllerFormHelper.CurriculumAreaSelectionData], currentTermlyCurriculumSelection: TermlyCurriculumSelection, currentTerm: SchoolTerm, todaysDate: java.time.LocalDate)(implicit request: AuthenticatedRequest[Any])
 
 @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
-    userPictureUri, userFirstName, userFamilyName, Some(classDetails), Some(CLASS_TERMLY_PLANS), Some(currentTermlyCurriculumSelection, "NONE"), None, Some(currentTerm)) {
+    userPictureUri, userFirstName, userFamilyName, Some(classDetails), Some(CLASS_TERMLY_PLANS), Some(currentTermlyCurriculumSelection, "NONE"), None, Some(currentTerm), todaysDate) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary btn-block" role="button"
