--- a/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
+++ b/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
@@ -34,9 +34,10 @@
                 class="btn btn-outline-secondary btn-sm template-weekly-planning-mondays-actual-monday-date-btn"
                 data-selected-monday-date="@mondayInTerm.toString"
                 data-is-currently-selected="true">
-                    <small>Week of Monday</small>
+                    <small>Week of Monday
                     <br>
                     @mondayInTerm.getDayOfMonth, @mondayInTerm.getMonth.toString.toLowerCase.capitalize
+                    </small>
                 </button>
             } else {
                 <button type="button"
